--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="icon" type="image/svg+xml" href="/SVG/Final Favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="./favicon.svg">
 	<title>Space Explorer Hub</title>
 </head>
 <body>
